# dfireballz

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: mcp-health-check.sh  mcp-start.sh
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-build-push.yml
config/: .env.example  mcpo.json
config/mcp_hosts/: claude-desktop.json.example  mcphost.yml.example  open-webui-mcpo.json.example
database/: Dockerfile  README.md  init.sql
dfireballz/: __init__.py  config.py  exceptions.py  main.py
dfireballz/backends/: CLAUDE.md  __init__.py  base.py  docker.py
dfireballz/data/: tools_catalog.json
dfireballz/mcp/: server.py
dfireballz/models/: CLAUDE.md  __init__.py  base.py  forensic_payload.py
dfireballz/modules/: base.py
dfireballz/prompts/: __init__.py  claude_playbook.md
docker/: claude-code-entrypoint.sh  claude-code.Dockerfile  mcp.json
docs/: FINDINGS-claude-code-scenarios.md
mcp-servers/: CLAUDE.md
orchestrator/: Dockerfile  case_manager.py  main.py  playbook_runner.py  report_generator.py  requirements.txt
output/: README
playbooks/: README.md  chain-of-custody.md  dark-web-trace.md  malware-analysis.md  mobile-artifact-analysis.md  network-forensics.md  osint-domain-investigation.md  osint-person-investigation.md  phishing-investigation.md  ransomware-investigation.md
scripts/: check-requirements.sh  configure_mcp.sh  install-claude-desktop.sh  setup-api-keys.sh  setup.sh  smoke-test.sh
tests/: conftest.py  test_backends.py  test_catalog.py  test_cli.py  test_config.py  test_forensic_payload.py  test_mcp_server.py  test_models.py  test_paths.py  test_prompts.py  test_reporting.py
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+62 files in other folders)
