[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfireballz"
version = "2.0.0"
description = "AI-native digital forensics and cybercrime investigation platform with MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "DFIReballz Contributors"},
]
keywords = ["forensics", "dfir", "investigation", "mcp", "cybercrime", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    # Core - pinned for reproducibility and supply-chain safety
    "click==8.1.8",
    "httpx==0.28.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "rich==13.9.4",
    # Reporting
    "weasyprint==68.1",
    "jinja2==3.1.6",
    # MCP Server
    "mcp>=1.23.0",
    # Utilities
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "ruff==0.9.6",
    "mypy==1.14.1",
    "respx==0.22.0",
]

[project.scripts]
dfireballz = "dfireballz.main:cli"

[tool.setuptools.packages.find]
include = ["dfireballz*"]

[tool.setuptools.package-data]
"dfireballz.data" = ["*.json"]
"dfireballz.prompts" = ["*.md"]
"dfireballz.prompts.templates" = ["*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
